--- a/720App/720App.vcxproj.filters
+++ b/720App/720App.vcxproj.filters
@@ -61,6 +61,9 @@
     <ClCompile Include="CMainAlbumAdapter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FormatString.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="720App.rc">
@@ -105,6 +108,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CMainAlbumAdapter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FormatString.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
